--- a/CommissionPositions/.project
+++ b/CommissionPositions/.project
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>CommissionPosition</name>
-	<comment>Project CommissionPosition created by Buildship.</comment>
+	<name>CommissionPositions</name>
+	<comment>Project CommissionPositions created by Buildship.</comment>
 	<projects>
 	</projects>
 	<buildSpec>
