--- a/CommissionPositions/CommissionPositions-api/.project
+++ b/CommissionPositions/CommissionPositions-api/.project
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>CommissionPosition-api</name>
-	<comment>Project CommissionPosition-api created by Buildship.</comment>
+	<name>CommissionPositions-api</name>
+	<comment>Project CommissionPositions-api created by Buildship.</comment>
 	<projects>
 	</projects>
 	<buildSpec>
