--- a/CommissionPositions/CommissionPositions-api/.settings/org.eclipse.buildship.core.prefs
+++ b/CommissionPositions/CommissionPositions-api/.settings/org.eclipse.buildship.core.prefs
@@ -8,4 +8,4 @@ containers=org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debu
 derived.resources=.gradle,build
 eclipse.preferences.version=1
 natures=org.eclipse.jdt.core.javanature
-project.path=\:modules\:CommissionPosition\:CommissionPosition-api
+project.path=\:modules\:CommissionPositions\:CommissionPositions-api
