--- a/CommissionPositions/.settings/org.eclipse.buildship.core.prefs
+++ b/CommissionPositions/.settings/org.eclipse.buildship.core.prefs
@@ -5,4 +5,4 @@ connection.jvm.arguments=
 connection.project.dir=..\\..
 derived.resources=.gradle,build
 eclipse.preferences.version=1
-project.path=\:modules\:CommissionPosition
+project.path=\:modules\:CommissionPositions
