--- a/CommissionPositions/CommissionPositions-service/build.gradle
+++ b/CommissionPositions/CommissionPositions-service/build.gradle
@@ -3,11 +3,11 @@ dependencies {
 	compileOnly group: "com.liferay", name: "com.liferay.osgi.util", version: "3.0.0"
 	compileOnly group: "com.liferay", name: "com.liferay.portal.spring.extender", version: "2.0.0"
 	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "2.6.0"
-	compileOnly project(":modules:CommissionPosition:CommissionPosition-api")
+	compileOnly project(":modules:CommissionPositions:CommissionPositions-api")
 }
 
 buildService {
-	apiDir = "../CommissionPosition-api/src/main/java"
+	apiDir = "../CommissionPositions-api/src/main/java"
 }
 
-group = "tj.commission.position"
+group = "tj.commission.positions"
